@@ -2,12 +2,10 @@
 # Tests portal creation
 #
 
-import os
 from Products.CMFPlone.tests import PloneTestCase
 from Products.CMFPlone.tests import dummy
 from Products.CMFCore.tests.base.testcase import WarningInterceptor
 
-from tempfile import mkstemp
 from zope.component import getGlobalSiteManager
 from zope.component import getSiteManager
 from zope.component import getMultiAdapter
@@ -950,28 +948,6 @@ class TestPortalBugs(PloneTestCase.PloneTestCase):
 
         setuphandlers.importFinalSteps(FakeContext()) # raises error if fail
         self.failUnless(1 == 1)
-
-    def testExportImportLosesTextIndexes(self):
-        # Importing a portal .zexp loses text indexes? (#4803)
-        self.loginAsPortalOwner()
-        tempfile = mkstemp('.zexp')
-        tempname = tempfile[1]
-        try:
-            # Export the portal
-            self.portal._p_jar.exportFile(self.portal._p_oid, tempname)
-            # Nuke it
-            self.app._delObject(PloneTestCase.portal_name)
-            # Import the portal
-            self.app._importObjectFromFile(tempname, set_owner=0)
-            # Now check the indexes are still present
-            for index in ('Description', 'Title', 'SearchableText'):
-                try:
-                    self.catalog.Indexes[index]
-                except KeyError:
-                    self.fail('Index %s missing after export/import!' % index)
-        finally:
-            os.close(tempfile[0])
-            os.remove(tempname)
 
 
 class TestManagementPageCharset(PloneTestCase.PloneTestCase):
